# overlay

./: t
acct-group/loki/: Manifest  loki-0.ebuild
acct-group/mtail/: Manifest  mtail-0.ebuild
acct-user/loki/: Manifest  loki-0.ebuild
acct-user/mtail/: Manifest  mtail-0.ebuild
app-admin/conky/: Manifest  conky-1.10.8-r1.ebuild  conky-1.10.8-r2.ebuild  conky-1.10.8-r4.ebuild  conky-1.11.3.ebuild
app-admin/keepassxc/: Manifest  keepassxc-9999.ebuild
app-admin/mtail/: Manifest  mtail-3.0.8.ebuild  mtail-3.0.9.ebuild
app-admin/openrc-settingsd/: Manifest
app-admin/testdisk/: Manifest  testdisk-7.0-r2.ebuild
app-backup/zbackup/: Manifest  zbackup-1.4.4.ebuild
app-crypt/gcr/: Manifest  gcr-3.41.0.ebuild
app-crypt/gnupg/: Manifest  gnupg-2.2.15-r1.ebuild
app-crypt/gpg-tui/: Manifest  gpg-tui-0.11.1.ebuild
app-crypt/libsecret/: Manifest  libsecret-0.18.5.ebuild
app-crypt/pinentry/: Manifest  pinentry-1.2.1-r3.ebuild
app-crypt/seahorse/: Manifest  seahorse-43.0-r3.ebuild  seahorse-43.0-r4.ebuild
app-dicts/myspell-en/: Manifest  myspell-en-20081002.ebuild  myspell-en-20180901.ebuild  myspell-en-20181101.ebuild
app-dicts/myspell-large-en/: Manifest  myspell-large-en-20180416.ebuild
app-editors/okteta/: Manifest  okteta-0.26.17.ebuild  okteta-9999.ebuild
app-editors/sublime-text/: Manifest
app-text/tray-tui/tray-tui-0.3.3/: .gitignore  Cargo.toml  README.md  config_example.toml  flake.nix
app-text/tray-tui/tray-tui-0.3.3/src/: app.rs  cli.rs  config.rs  event.rs  handler.rs  main.rs  ui.rs  wrappers.rs
profiles/: repo_name
(+1109 files in other folders)
