[package]
name = "tray-tui"
description = "System tray in your terminal"
repository = "https://github.com/Levizor/tray-tui"
homepage = "https://github.com/Levizor/tray-tui"

version = "0.3.2"
authors = [
  "Levizor <levizor@disroot.org>",
  "EliasDevis <elias.devis@protonmail.com>",
]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
config = "0.15.15"
crokey = "1.3.0"
crossterm = { version = "0.29", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
indexmap = "2.11.0"
log = "0.4.28"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref", "serde"] }
serde = { version = "1.0.219", features = ["serde_derive", "derive"] }
simplelog = "0.12.2"
system-tray = { version = "0.8.4" }
tokio = { version = "1.47.1", features = ["full"] }
tui-tree-widget = "0.23.1"
